tests/sksl/errors/Ossfuzz38831.glsl
### Compilation failed:

error: 3: unsized arrays are not permitted here
       case 0: short[] x;
               ^^^^^^^^^
error: 4: unsized arrays are not permitted here
               int[] a = x;
               ^^^^^^^^^^^
error: 3: unsized arrays are not permitted here
       case 0: short[] x;
               ^^^^^^^^^
error: 4: unsized arrays are not permitted here
               int[] a = x;
               ^^^^^^^^^^^
4 errors
